[DMS-Customization] *Done https://seldat.atlassian.net/browse/SOLA1-51*

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-Jo-4v6">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SlideMenuAvartarCell" rowHeight="218" id="fhq-7v-8Dw" customClass="SlideMenuCell" customModule="DMSDriver" customModuleProvider="target">
@@ -255,7 +255,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3Fi-Sg-Kmw" firstAttribute="trailing" secondItem="OL3-Jo-4v6" secondAttribute="trailing" id="6of-wO-Lrh"/>
-                            <constraint firstItem="OL3-Jo-4v6" firstAttribute="top" secondItem="SoV-Hu-eUk" secondAttribute="top" id="FnR-0o-CpV"/>
+                            <constraint firstItem="OL3-Jo-4v6" firstAttribute="top" secondItem="3Fi-Sg-Kmw" secondAttribute="top" id="DkQ-iJ-gmx"/>
                             <constraint firstItem="3Fi-Sg-Kmw" firstAttribute="bottom" secondItem="OL3-Jo-4v6" secondAttribute="bottom" id="S6T-Bb-XcT"/>
                             <constraint firstItem="OL3-Jo-4v6" firstAttribute="leading" secondItem="3Fi-Sg-Kmw" secondAttribute="leading" id="ymJ-TM-4d8"/>
                         </constraints>
