--- a/DMSDriver/DMSDriver/App/ViewControllers/Order/LoadUnloadOrderVC/LoadUnloadOrder.storyboard
+++ b/DMSDriver/DMSDriver/App/ViewControllers/Order/LoadUnloadOrderVC/LoadUnloadOrder.storyboard
@@ -57,15 +57,15 @@
                                 <rect key="frame" x="0.0" y="104" width="414" height="758"/>
                                 <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadUnLoadListCell" rowHeight="185" id="83f-Uv-ppw" customClass="LoadUnLoadListCell" customModule="DMSDriver" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="185"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoadUnLoadListCell" rowHeight="210" id="83f-Uv-ppw" customClass="LoadUnLoadListCell" customModule="DMSDriver" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="210"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="83f-Uv-ppw" id="yaZ-J8-BSS">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="185"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="210"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8H2-jH-fWx">
-                                                    <rect key="frame" x="15" y="5" width="384" height="175"/>
+                                                    <rect key="frame" x="15" y="5" width="384" height="200"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Package" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1EQ-7V-2Xw">
                                                             <rect key="frame" x="15" y="10" width="54.5" height="16"/>
@@ -77,7 +77,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Barcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXD-6S-jwQ">
-                                                            <rect key="frame" x="15" y="62" width="52.5" height="16"/>
+                                                            <rect key="frame" x="15" y="91" width="52.5" height="16"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Package ref ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Hu-Vh-4ww">
-                                                            <rect key="frame" x="15" y="88" width="93" height="16"/>
+                                                            <rect key="frame" x="15" y="117" width="93" height="16"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -104,7 +104,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eF2-zE-kZh">
-                                                            <rect key="frame" x="5" y="174" width="374" height="1"/>
+                                                            <rect key="frame" x="5" y="199" width="374" height="1"/>
                                                             <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="1" id="L6H-r3-lip"/>
@@ -129,7 +129,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaw-mL-Aao">
-                                                            <rect key="frame" x="77.5" y="59" width="296.5" height="22"/>
+                                                            <rect key="frame" x="77.5" y="88" width="296.5" height="22"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="XEr-1d-iVh"/>
                                                             </constraints>
@@ -138,7 +138,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVV-Rj-wnJ">
-                                                            <rect key="frame" x="118" y="85" width="256" height="22"/>
+                                                            <rect key="frame" x="118" y="114" width="256" height="22"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="4GY-bm-P1j"/>
                                                             </constraints>
@@ -147,7 +147,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWG-CD-OUp">
-                                                            <rect key="frame" x="294" y="114" width="80" height="30"/>
+                                                            <rect key="frame" x="294" y="143" width="80" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="Qsz-xz-xRb"/>
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="lQ6-cU-PJ5"/>
@@ -158,14 +158,36 @@
                                                                 <action selector="onbtnClickLoadUnloadWithBtn:" destination="83f-Uv-ppw" eventType="touchUpInside" id="D71-bQ-KQx"/>
                                                             </connections>
                                                         </button>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Actual Qty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8UR-OE-0qS">
+                                                            <rect key="frame" x="15" y="65" width="65" height="16"/>
+                                                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
+                                                            <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Actual Qty"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </label>
+                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SpJ-eG-nJ1">
+                                                            <rect key="frame" x="190" y="60" width="184" height="26"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="26" id="SKv-nb-L8T"/>
+                                                            </constraints>
+                                                            <nil key="textColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                        </textField>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstItem="8UR-OE-0qS" firstAttribute="leading" secondItem="hx8-bo-W2b" secondAttribute="leading" id="2Io-Er-xj2"/>
                                                         <constraint firstItem="pw8-ao-PTj" firstAttribute="centerY" secondItem="1EQ-7V-2Xw" secondAttribute="centerY" id="2km-k5-b2Y"/>
                                                         <constraint firstItem="4Zh-bT-Fcw" firstAttribute="centerY" secondItem="hx8-bo-W2b" secondAttribute="centerY" id="2yF-tZ-WZ5"/>
                                                         <constraint firstItem="5Hu-Vh-4ww" firstAttribute="leading" secondItem="LXD-6S-jwQ" secondAttribute="leading" id="598-fg-J7K"/>
                                                         <constraint firstItem="1EQ-7V-2Xw" firstAttribute="leading" secondItem="8H2-jH-fWx" secondAttribute="leading" constant="15" id="7w1-Mx-qKe"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="130" id="81V-rD-QLm"/>
+                                                        <constraint firstItem="LXD-6S-jwQ" firstAttribute="top" secondItem="8UR-OE-0qS" secondAttribute="bottom" constant="10" id="COb-1k-6kM"/>
+                                                        <constraint firstItem="SpJ-eG-nJ1" firstAttribute="leading" secondItem="8UR-OE-0qS" secondAttribute="trailing" constant="110" id="Cni-SX-3as"/>
+                                                        <constraint firstItem="SpJ-eG-nJ1" firstAttribute="trailing" secondItem="4Zh-bT-Fcw" secondAttribute="trailing" id="DIx-Hq-7OI"/>
                                                         <constraint firstItem="gVV-Rj-wnJ" firstAttribute="leading" secondItem="5Hu-Vh-4ww" secondAttribute="trailing" constant="10" id="FHz-2S-Pbk"/>
                                                         <constraint firstItem="pw8-ao-PTj" firstAttribute="leading" secondItem="1EQ-7V-2Xw" secondAttribute="trailing" constant="10" id="GHm-Fv-Dbb"/>
                                                         <constraint firstItem="gVV-Rj-wnJ" firstAttribute="trailing" secondItem="xaw-mL-Aao" secondAttribute="trailing" id="Hub-Cy-76p"/>
@@ -176,8 +198,10 @@
                                                         <constraint firstItem="dWG-CD-OUp" firstAttribute="trailing" secondItem="gVV-Rj-wnJ" secondAttribute="trailing" id="Tpf-Wb-Zdf"/>
                                                         <constraint firstItem="xaw-mL-Aao" firstAttribute="centerY" secondItem="LXD-6S-jwQ" secondAttribute="centerY" id="WZM-wv-8M0"/>
                                                         <constraint firstItem="hx8-bo-W2b" firstAttribute="height" secondItem="1EQ-7V-2Xw" secondAttribute="height" id="XFw-J1-asv"/>
+                                                        <constraint firstItem="SpJ-eG-nJ1" firstAttribute="centerY" secondItem="8UR-OE-0qS" secondAttribute="centerY" id="aHq-NS-CHq"/>
                                                         <constraint firstItem="hx8-bo-W2b" firstAttribute="leading" secondItem="1EQ-7V-2Xw" secondAttribute="leading" id="aNp-YZ-ybg"/>
                                                         <constraint firstAttribute="bottom" secondItem="eF2-zE-kZh" secondAttribute="bottom" id="aiJ-Vi-4T8"/>
+                                                        <constraint firstItem="8UR-OE-0qS" firstAttribute="top" secondItem="4Zh-bT-Fcw" secondAttribute="bottom" constant="10" id="cM5-rz-BQp"/>
                                                         <constraint firstItem="xaw-mL-Aao" firstAttribute="trailing" secondItem="4Zh-bT-Fcw" secondAttribute="trailing" id="cOL-ER-Ojr"/>
                                                         <constraint firstAttribute="trailing" secondItem="eF2-zE-kZh" secondAttribute="trailing" constant="5" id="eTE-lR-bBa"/>
                                                         <constraint firstItem="4Zh-bT-Fcw" firstAttribute="leading" secondItem="hx8-bo-W2b" secondAttribute="trailing" constant="10" id="ehO-0f-KSp"/>
@@ -186,7 +210,6 @@
                                                         <constraint firstItem="xaw-mL-Aao" firstAttribute="leading" secondItem="LXD-6S-jwQ" secondAttribute="trailing" constant="10" id="m7A-Ec-8Qb"/>
                                                         <constraint firstItem="1EQ-7V-2Xw" firstAttribute="top" secondItem="8H2-jH-fWx" secondAttribute="top" constant="10" id="nqW-aL-Gfy"/>
                                                         <constraint firstAttribute="trailing" secondItem="pw8-ao-PTj" secondAttribute="trailing" constant="10" id="olX-PX-vSA"/>
-                                                        <constraint firstItem="LXD-6S-jwQ" firstAttribute="top" secondItem="hx8-bo-W2b" secondAttribute="bottom" constant="10" id="qfF-GW-LbU"/>
                                                         <constraint firstItem="hx8-bo-W2b" firstAttribute="top" secondItem="1EQ-7V-2Xw" secondAttribute="bottom" constant="10" id="rBu-La-7ET"/>
                                                         <constraint firstItem="eF2-zE-kZh" firstAttribute="leading" secondItem="8H2-jH-fWx" secondAttribute="leading" constant="5" id="wIV-2U-IwP"/>
                                                         <constraint firstItem="eF2-zE-kZh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dWG-CD-OUp" secondAttribute="bottom" constant="5" id="wo0-U0-FU4"/>
@@ -208,6 +231,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="actualQtyTextField" destination="SpJ-eG-nJ1" id="NfD-ZT-sXY"/>
                                             <outlet property="btnLoadUnload" destination="dWG-CD-OUp" id="zK5-cu-twA"/>
                                             <outlet property="lblBarCode" destination="xaw-mL-Aao" id="teq-yI-xCY"/>
                                             <outlet property="lblPackage" destination="pw8-ao-PTj" id="uqC-Rq-cH7"/>
